# lobster-guard

./: .gitignore  CHANGELOG.md  README.md  README_DE.md  README_EN.md  README_FR.md  README_JA.md  README_RU.md  go.mod  go.sum  scan_full_v3.json  scan_results.json  targets.txt
nuclei-templates/: openclaw-agent-files.yaml  openclaw-browser-cdp.yaml  openclaw-canvas-exposed.yaml  openclaw-cors-misconfig.yaml  openclaw-default-token.yaml  openclaw-detect.yaml  openclaw-discord-interactions.yaml  openclaw-exec-approvals.yaml  openclaw-full-rce.yaml  (+14 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
rust/src/chain/: chains.rs  dag.rs  mod.rs
rust/src/config/: mod.rs
rust/src/exploit/: acp_bypass.rs  agent_file_inject.rs  agent_inject.rs  apikey_steal.rs  approval_hijack.rs  auth_disable_leak.rs  auth_mode_abuse.rs  base.rs  browser_request.rs  browser_upload_traversal.rs  bypass_soul.rs  c2_exfil.rs  channel_inject.rs  config_tamper.rs  cors_bypass.rs  cron_bypass.rs  csrf_no_origin.rs  env_inject.rs  eval_inject.rs  exec_race_toctou.rs  exec_socket_leak.rs  flood_guard_reset.rs  gateway_hijack.rs  guest_mode_abuse.rs  hidden_content.rs  hook_inject.rs  ipv6_ssrf_bypass.rs  keychain_cmd_inject.rs  link_template_inject.rs  localhost_trust.rs  log_disclosure.rs  marker_spoof.rs  mcp_inject.rs  mdns_leak.rs  memory_data_leak.rs  mod.rs  msg_platform_spoof.rs  oauth_abuse.rs  oauth_token_theft.rs  obfuscation_bypass.rs  (+33 more)
rust/src/report/: mod.rs
rust/src/scan/: mod.rs
rust/src/utils/: discovery.rs  http.rs  mod.rs  mutate.rs  types.rs  ws.rs
(+86 files in other folders)
